--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>QR design</title>
+        <title>Card</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="qr.css">
     </head>
     <body>
         <div>
-            <img src="images/image-qr-code.png">
-            <h3>Improve your front-end skills by building projects</h3>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+            <div class="top">
+            <img class="icon"  src="file:///F:/download/unwant/blog-preview-card-main/blog-preview-card-main/assets/images/illustration-article.svg">
+            <br><button style="font-weight: bold;">Learning</button>
+            <p  style="font-family: sans-serif; font-size: 12px; color: rgb(24, 21, 21);">Published 21 Dec 2023</p>
+             <h2>HTML& CSS foundations</h2>
+            <p style="color: gray; line-height: 110%; letter-spacing: 0.1em;">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+            <div class="bottom">
+                <img class="profile"  src="images/image-avatar.webp" alt="profile">
+                <p style="font-weight: bold; font-size: 12px; font-family: sans-serif; color: black;">Greg Hooper</p>
+            </div>
+        </div>
         </div>
     </body>
 </html>
