--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div>
             <div class="top">
-            <img class="icon"  src="file:///F:/download/unwant/blog-preview-card-main/blog-preview-card-main/assets/images/illustration-article.svg">
+            <img class="icon"  src="images/image-avatar.webp">
             <br><button style="font-weight: bold;">Learning</button>
             <p  style="font-family: sans-serif; font-size: 12px; color: rgb(24, 21, 21);">Published 21 Dec 2023</p>
              <h2>HTML& CSS foundations</h2>
