--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Card</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="qr.css">
-    </head>
-    <body>
-        <div>
-            <div class="top">
-            <img class="icon"  src="images/illustration-article.svg">
-            <br><button style="font-weight: bold;">Learning</button>
-            <p  style="font-family: sans-serif; font-size: 12px; color: rgb(24, 21, 21);">Published 21 Dec 2023</p>
-             <h2>HTML& CSS foundations</h2>
-            <p style="color: gray; line-height: 110%; letter-spacing: 0.1em;">These languages are the backbone of every website, defining structure, content, and presentation.</p>
-            <div class="bottom">
-                <img class="profile"  src="images/image-avatar.webp" alt="profile">
-                <p style="font-weight: bold; font-size: 12px; font-family: sans-serif; color: black;">Greg Hooper</p>
-            </div>
-        </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Profile Card</title>
+
+    <!-- Link the CSS file here -->
+    <link rel="stylesheet" href="qr.css" />
+</head>
+
+<body>
+    <!-- Your profile card goes here -->
+
+    <div class="card">
+    <img src="" alt="Profile Image" />
+        <h1>Jessica Randall</h1>
+        <p class="location">London, United Kingdom</p>
+        <p class="subtitle">"Front-end developer and avid reader."</p>
+
+        <a href="#" class="button">GitHub</a>
+        <a href="#" class="button">Frontend Mentor</a>
+        <a href="#" class="button">LinkedIn</a>
+        <a href="#" class="button">Twitter</a>
+        <a href="#" class="button">Instagram</a>
+    </div>
+</body>
 </html>
