--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Your profile card goes here -->
 
     <div class="card">
-    <img src="images/image-avatar.webp" alt="Profile Image" />
+    <img src="images/jessi.jpeg" alt="Profile Image" />
         <h1>Jessica Randall</h1>
         <p class="location">London, United Kingdom</p>
         <p class="subtitle">"Front-end developer and avid reader."</p>
